# auction_classic

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Notebook.ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ActionsClassicWoW/PYTHON S/: Pythonscript.py  migration_log.txt
configs/: transformer.yaml
data/: README.md  add_historical_prices.ipynb  app.py  auction_migrator.py  auction_preprocessor.py  config.example.json  eda.ipynb  historical.py  items.csv  items_cata.csv  items_wotlk.csv  prepare_cata_data.py  retrieve_data.sh  transformers.py  utils.py  validate_data.py
data/migrator/: config.json  (+4 more)
eval/: auction.db  auction_checkpoint.ipynb  evaluation.ipynb  evaluation_fix.ipynb  rnn_evaluation.ipynb
notebooks/: eda.ipynb  feature_normalization.ipynb  forest.ipynb  forest_evaluation.ipynb  lengths.ipynb  rnn_evaluation.ipynb  transformer.ipynb  transformer_evaluation.ipynb  transformer_training.ipynb  weekly_timestamps.ipynb
prediction_engine/: Notebook.ipynb  auction_dataset.py  auction_predictor.py  auction_transformer.py  data.ipynb  forest.ipynb  inference.py  migrate.py  model.py  prediction.ipynb  requirements.txt  rnn.ipynb  train.py  training.ipynb
rl/: auction_env.py  auction_env_beta.py
scripts/: app.py  benchmark_dataloader.py  compute_feature_stats.py  compute_timestamps.py  historical.py  merge_items.py  prepare_data.sh  prepare_rnn_data.py  preprocess_data.py  retrieve_auctions.sh  retrieve_data.sh  sync_auctions.sh  train.py  tune.py  upload_dataset.py  utils.py  validate_data.py  weekly_hours.py
ui/: app.py
(+584 files in other folders)
